# strange_three_in_row

./: .gitignore  README.md  pyproject.toml  test_funcs.py
